# XCatcher

./: .gitattributes  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/me/vecrates/xcatcher/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
repo/me/vecrates/xcatcher/xcatcher/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
repo/me/vecrates/xcatcher/xcatcher/1.0.0-beta/: xcatcher-1.0.0-beta.aar  xcatcher-1.0.0-beta.aar.md5  xcatcher-1.0.0-beta.aar.sha1  xcatcher-1.0.0-beta.aar.sha256  xcatcher-1.0.0-beta.aar.sha512  xcatcher-1.0.0-beta.pom  xcatcher-1.0.0-beta.pom.md5  xcatcher-1.0.0-beta.pom.sha1  xcatcher-1.0.0-beta.pom.sha256  xcatcher-1.0.0-beta.pom.sha512
xcatcher/: CMakeLists.txt  build.gradle  consumer-rules.pro  maven_build.gradle
xcatcher/src/androidTest/java/me/vecrates/xcatcher/: ExampleInstrumentedTest.java
xcatcher/src/main/cpp/: CrashHandler.cpp  CrashHandler.h  catcher.cpp
xcatcher/src/main/java/me/vecrates/xcatcher/: Catcher.java  CrashCollector.java  InitConfig.java  XCatcher.java
xcatcher/src/main/java/me/vecrates/xcatcher/core/: CrashCollector.java  CrashHandle.java  JavaCatcher.java  LogcatReader.java  NativeCatcher.java  NativeCrash.java  NativeThrowable.java  OnCrashListener.java
xcatcher/src/test/java/me/vecrates/xcatcher/: ExampleUnitTest.java
(+2 files in other folders)
